metadata/force-app/main/default/objects/CustomName_RXddz__c/CustomName_RXddz__c.object-meta.xml
<CustomObject>
    <description>Description_mxOcG</description>
    <label>CustomLabel_MMTqu</label>
    <nameField>
        <label>CustomLabel_MMTqu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MMTqus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>