metadata/force-app/main/default/objects/CustomName_RXddz__c/fields/CustomField_ultfB__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ultfB__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhkYPc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>